# CrokyScopy

./: .clinerules  .gemini  .gitignore  ARCHITECTURE.md  CMakeLists.txt  GEMINI.md  PROJECT_HANDOVER.md  PROPOSAL.md  README.md  TODO.md  build_log.txt
.github/workflows/: build.yml
Archive/: CMakeLists.txt  LICENSE  README.md
Archive/.github/workflows/: build.yml
Archive/Source/: HUDWindow.cpp  HUDWindow.h  PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h  ScopeBuffer.h  ScopeBufferTest.cpp  ScopeComponent.cpp  ScopeComponent.h
Source/: Common.h  HUDWindow.cpp  HUDWindow.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ScopeComponent.cpp  ScopeComponent.h
Source/Core/: ScopeBuffer.h  ScopeBufferTest.cpp
Source/DSP/: PluginProcessor.cpp  PluginProcessor.h
Source/Tests/: StressTest.cpp
Source/UI/: HUDWindow.cpp  HUDWindow.h  ScopeComponent.cpp  ScopeComponent.h
install/lib/cmake/JUCE-8.0.1/: JUCEConfig.cmake
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ScopeHUDWindow.cpp  ScopeHUDWindow.h
